jaeger-all-in-one/jaeger-sts.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jaeger-allinone
spec:
  serviceName: "jaeger-allinone"
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jaeger-allinone
      app.kubernetes.io/component: all-in-one
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jaeger-allinone
        app.kubernetes.io/component: all-in-one
    # serviceAccountName: jaeger-allinone
    spec:
      containers:
      - name: jaeger-allinone
        # image: jaegertracing/all-in-one:1.48
        image: registry:5000/jaegertracing/all-in-one:1.48
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
          runAsGroup: 1000
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 200m
            memory: 128Mi
        ports:
          - containerPort: 5775
            protocol: UDP
          - containerPort: 6831
            protocol: UDP
          - containerPort: 6832
            protocol: UDP
          - containerPort: 5778
            protocol: TCP
          - containerPort: 16686
            protocol: TCP
          - containerPort: 16685
            protocol: TCP
          - containerPort: 14250
            protocol: TCP
          - containerPort: 14268
            protocol: TCP
          - containerPort: 14269
            protocol: TCP
          - containerPort: 9411
            protocol: TCP
          - containerPort: 4317
            protocol: TCP
          - containerPort: 4318
            protocol: TCP
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /
            port: 14269
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 14269
            scheme: HTTP
          initialDelaySeconds: 1
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        volumeMounts:
        - name: jaeger-allinone-storage
          mountPath: /badger
  volumeClaimTemplates:
  - metadata:
      name: jaeger-allinone-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
