jaeger-all-in-one/jaeger-agent-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: jaeger-allinone-agent
  labels:
    app.kubernetes.io/name: jaeger-allinone
    app.kubernetes.io/component: service-agent
spec:
  ports:
    - name: zk-compact-trft
      port: 5775
      protocol: UDP
    - name: config-rest
      port: 5778
    - name: jg-compact-trft
      port: 6831
      protocol: UDP
    - name: jg-binary-trft
      port: 6832
      protocol: UDP
  clusterIP: None
  selector:
    app.kubernetes.io/name: jaeger-allinone
    app.kubernetes.io/component: all-in-one
