jaeger-all-in-one/jaeger-collector-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: jaeger-allinone-collector
  labels:
    app.kubernetes.io/name: jaeger-allinone
    app.kubernetes.io/component: service-collector
spec:
  ports:
    - name: http-zipkin
      port: 9411
    - name: grpc-http
      port: 14250
    - name: c-tchan-trft
      port: 14267
    - name: http-c-binary-trft
      port: 14268
    - name: otlp-grpc
      port: 4317
    - name: otlp-http
      port: 4318
  clusterIP: None
  selector:
    app.kubernetes.io/name: jaeger-allinone
    app.kubernetes.io/component: all-in-one
