jaeger-all-in-one/jaeger-query-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: jaeger-allinone-query
  labels:
    app.kubernetes.io/name: jaeger-allinone
    app.kubernetes.io/component: service-query
spec:
  ports:
    - name: http-query
      port: 16686
      targetPort: 16686
    - name: grpc-query
      port: 16685
      targetPort: 16685
  clusterIP: None
  selector:
    app.kubernetes.io/name: jaeger-allinone
    app.kubernetes.io/component: all-in-one
