jaeger-all-in-one/jaeger-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app.kubernetes.io/name: jaeger-allinone
  name: jaeger-allinone
spec:
  rules:
  - host: jaeger-allinone.dc02.lotusflare.info
    http:
      paths:
      - backend:
          service:
            name: jaeger-allinone-query
            port:
              number: 16686
        path: /
        pathType: ImplementationSpecific
